Fixed image alignment for small images
refs. https://github.com/TryGhost/Casper/issues/517

- updated styles to center align small images with long caption text

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2088,6 +2088,7 @@ Usage (In Ghost editor):
 
 .post-full-content .kg-image {
     max-width: 100%;
+    margin: 0 auto;
 }
 
 /* Preventing full-width image overlap with post image.  */
